--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -67,6 +67,12 @@
   outline: 0;
   outline-offset: 0;
   min-width: 0;
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+.heroInput:focus-visible {
+  outline: 0;
 }
 
 .heroInput::placeholder {
